--- a/wp-content/themes/mdbtheme/scss/pro/modules/accordion-extended/_module.scss
+++ b/wp-content/themes/mdbtheme/scss/pro/modules/accordion-extended/_module.scss
@@ -1,6 +1,6 @@
 // Accordion extended
 .accordion-gradient-bcg {
-  background: linear-gradient(45deg, rgba(234, 21, 129, .6), rgba(10, 23, 187, .6) 100%);
+  background: linear-gradient(45deg, #0575E6 , #021B79 100%);
 }
 
 // stylelint-disable selector-max-class
