--- a/wp-content/themes/mdbtheme/css/style.css
+++ b/wp-content/themes/mdbtheme/css/style.css
@@ -13,7 +13,9 @@ body {
 .saint-petersburg-gradient {
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
 }
-
+.view {
+    padding-top:40px;
+}
 .card {
     border-radius: .375rem;
     box-shadow: 0px 10px 11px 0px rgba(0, 0, 0, .09);
@@ -35,9 +37,6 @@ body {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1), 0 2px 10px 0 rgba(0, 0, 0, 0.09);
 }
       .img-fluid, .modal-dialog.cascading-modal.modal-avatar .modal-header, .video-fluid { width: 100%; height: auto; }
-      body {
-        position: relative;
-      }
       .navbar.navbar-dark .navbar-nav .nav-item .nav-link.active {
         background: rgba(255, 255, 255, .15) !important;
       }
