--- a/wp-content/themes/mdbtheme/css/style.css
+++ b/wp-content/themes/mdbtheme/css/style.css
@@ -28,7 +28,9 @@ body {
 .z-depth-2 {
     box-shadow: 0px 10px 11px 0px rgba(0, 0, 0, .05), 0px 10px 11px 0px rgba(0, 0, 0, .05) !important;
 }
-
+.navbar {
+    padding: .2rem 1rem;
+}
 .rounded-new {
     border-radius: .375rem !important;
 }
